[gd_scene load_steps=7 format=3 uid="uid://bvhgw3gms24nu"]

[ext_resource type="Texture2D" uid="uid://doa6rc32h0wc8" path="res://Textures/Player/player_sprite.png" id="1_h2032"]
[ext_resource type="Script" path="res://Player/character_2d.gd" id="1_keldl"]
[ext_resource type="PackedScene" uid="uid://dcu8dmxof2hd5" path="res://Utility/hurt_box.tscn" id="3_ffh8q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rqhd8"]
radius = 5.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3a0m"]
size = Vector2(14, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_ivli0"]
radius = 379.438

[node name="Character2D" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_keldl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h2032")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_rqhd8")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="hurt_box" parent="." instance=ExtResource("3_ffh8q")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="hurt_box" index="0"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_r3a0m")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_ivli0")

[connection signal="hurt" from="hurt_box" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="hurt_box"]
